...
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/viewWaitlistButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View Waitlist"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/viewInvitedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View Invited"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/viewAttendeesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View Attendees"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/viewCancelledButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View Cancelled"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="@color/black"
...
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/runLotteryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Run Lottery"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="@color/black"
...
