...
        android:name="com.example.community.Screens.SplashPageFragment"
        android:label="Start Page"
        tools:layout="@layout/start_page"
        >
        <action
            android:id="@+id/action_SplashPageFragment_to_RoleSelectFragment"
            app:destination="@id/RoleSelectFragment">


        </action>

    </fragment>

...
            app:destination="@id/EntrantHomeFragment"
            >
        </action>

        <action
            android:id="@+id/action_RoleSelectFragment_to_OrganizerHomeFragment"
            app:destination="@id/OrganizerHomeFragment"
            >
        </action>

        <action
            android:id="@+id/action_RoleSelectFragment_to_AdminHomeFragment"
            app:destination="@id/AdminHomeFragment"
...
        <action
            android:id="@+id/action_OrganizerHomeFragment_to_OrganizerProfileFragment"
            app:destination="@id/EntrantUserProfileFragment">
        </action>
        <action
            android:id="@+id/action_OrganizerHomeFragment_to_CreateEventFragment"
            app:destination="@id/CreateEventFragment">
        </action>
        <action
            android:id="@+id/action_OrganizerHomeFragment_to_OrganizerEventDescriptionFragment"
            app:destination="@id/OrganizerEventDescriptionFragment">
        </action>
        <action
            android:id="@+id/action_OrganizerHomeFragment_to_GeolocationFragment"
            app:destination="@id/GeolocationFragment" />
    </fragment>

...
        <action
            android:id="@+id/action_OrganizerEventDescriptionFragment_to_CreateEventFragment"
            app:destination="@id/CreateEventFragment" />

        <action
            android:id="@+id/action_OrganizerEventDescriptionFragment_to_OrganizerPosterUploadFragment"
            app:destination="@id/OrganizerPosterUploadFragment" />
    </fragment>

    <fragment
        android:id="@+id/OrganizerPosterUploadFragment"
        android:name="com.example.community.Screens.OrganizerScreens.OrganizerPosterUploadFragment"
        android:label="Upload Event Poster"
...
